fix command image layout problems and replace tables by divs

--- a/guvnor-webapp-drools/src/main/java/org/drools/guvnor/client/simulation/resources/Simulation.css
+++ b/guvnor-webapp-drools/src/main/java/org/drools/guvnor/client/simulation/resources/Simulation.css
@@ -32,6 +32,7 @@
 }
 
 .commandImage {
+    float: left;
 }
 .commandLabel {
     font-weight: bold;
